--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -5,4 +5,39 @@
     line-height: rem(36px);
     text-align: center;
   }
+
+  &__content {
+    margin: rem(194px auto 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__wrapper {
+    max-width: rem(1020px);
+    width: 100%;
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &:not(:first-child) {
+      margin-top: rem(32px);
+    }
+  }
+
+  &__col {
+    width: 48%;
+    font-size: rem(26px);
+    line-height: rem(26px);
+    color: #4093ee;
+  }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
