--- a/src/styles/components/_login.scss
+++ b/src/styles/components/_login.scss
@@ -33,5 +33,12 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
+    &-error {
+      font-weight: 600;
+      font-size: rem(22px);
+      line-height: rem(22px);
+      color: #f3343f;
+    }
   }
 }
